k8s/prod/NetflixFrontend/canary-deployment.yaml
# netflixfe-canary k8s yaml for deployment
# 1. netflixfe-canary k8s yaml for deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend-prod-canary-deployment
  labels:
    app: netflixfe-canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflixfe-canary
  template:
    metadata:
      labels:
        app: netflixfe-canary
    spec:
      containers:
        - name: netflix-frontend-canary
          image: barrotem/netflixfe:github-wf-deploy-20
